--- a/server/public/index.html
+++ b/server/public/index.html
@@ -26,7 +26,7 @@
       console.log(id_token);
 
       var xhr = new XMLHttpRequest();
-      xhr.open('POST', 'http://localhost:3000/google');
+      xhr.open('POST', 'https://secure-inlet-98652.herokuapp.com/google');
       xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
       xhr.onload = function () {
         console.log('Signed in as: ' + xhr.responseText);
